--- a/TomasJuarezSolution/TomasJuarezSolution/Views/Shared/_Layout.cshtml
+++ b/TomasJuarezSolution/TomasJuarezSolution/Views/Shared/_Layout.cshtml
@@ -23,6 +23,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Empleado" asp-action="IngresarEmpleado">Ingresar empleado</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Empleado" asp-action="VerEmpleadosPendientes">Empleados pendientes</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Empleado" asp-action="VerEmpleadosTotales">Ver empleados</a>
                         </li>
                         <li class="nav-item">
@@ -30,6 +36,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Empleado" asp-action="VerEmpleadosInactivos">Empleados Inactivos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="VerDiaMayoresVentas">Dia Mayores Ventas!</a>
                         </li>
                     </ul>
                 </div>
