--- a/TomasJuarezSolution/TomasJuarezSolution/Views/Home/Index.cshtml
+++ b/TomasJuarezSolution/TomasJuarezSolution/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "¡Bienvenidos!";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">¡Bienvenidos!</h1>
+    <p>Hola soy Tomás Juarez y estoy aplicando a Carta Sur, la cual brinda nuevas alternativas de financiacion para satisfacer las necesidades del publico consumidor no bancarizado. 
+        Aqui dejo mi solucion a la prueba tecnica planteada, en ella se reflejan mis conocimientos actuales y los que he logrado adquirir con este proyecto.</p>
 </div>
