Desarrollo de la prueba tecnica finalizada

--- a/TomasJuarezSolution/TomasJuarezSolution/Views/Home/Index.cshtml
+++ b/TomasJuarezSolution/TomasJuarezSolution/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">¡Bienvenidos!</h1>
-    <p>Hola soy Tomás Juarez y estoy aplicando a Carta Sur, la cual brinda nuevas alternativas de financiacion para satisfacer las necesidades del publico consumidor no bancarizado. 
+    <h1 class="h1 text-decoration-underline">¡Bienvenidos!</h1>
+    <img class="rounded-circle img-fluid" src="https://avatars.githubusercontent.com/u/104401877?s=400&u=cfd11611861b752257beefea524465cbf055f497&v=4" />
+    <p class="h5">Hola soy Tomás Juarez y estoy aplicando a Carta Sur, la cual es una empresa que brinda nuevas alternativas de financiacion para satisfacer las necesidades del publico consumidor no bancarizado. 
         Aqui dejo mi solucion a la prueba tecnica planteada, en ella se reflejan mis conocimientos actuales y los que he logrado adquirir con este proyecto.</p>
 </div>
