--- a/TomasJuarezSolution/TomasJuarezSolution/Views/Venta/DiaMayorVenta.cshtml
+++ b/TomasJuarezSolution/TomasJuarezSolution/Views/Venta/DiaMayorVenta.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "DiaMayorVenta";
 }
 
-<h1>Dia de mayores ventas!!</h1>
+<h1>¡¡Dia de mayores ventas!!</h1>
 
 <table class="table">
     <thead>
